--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -1,33 +1,40 @@
 {{ $lang := .Language }}
-<div class="page-content border">
-  <div class="search__container wrapper">
-    <section class="col search__summary">
-      {{ template "partials/summary" . }}
-    </section>
-    <section class="col col--md-12 col--lg-18 margin-bottom search__filter">
-      <div
-        class="col col--md-12 col--lg-18 padding-top-md--2 padding-right-md--1 padding-bottom-md--4 padding-left-sm--1 padding-left-md--1 js-mobile-filters__title">
-        <h3 class="font-size--18">
-          {{ localise "FilterResults" $lang 4 }}
-        </h3>
-      </div>
-      <div class="search__filter__content col--border-top">
-        {{ template "partials/filter" . }}
-      </div>
-    </section>
-    <section
-      class="col col--md-34 col--lg-40 margin-left-md--1"
-      aria-label="Search results">
-      <div class="col--md-34 col--lg-40 search__sort">
-        {{ template "partials/sort" . }}
-      </div>
-      <div class="search__results col--border-top">
-        {{ template "partials/department" . }}
-        {{ template "partials/results" . }}
-      </div>
-      <div class="search__pagination">
-        {{ template "partials/pagination" . }}
-      </div>
-    </section>
+<div class="ons-container search__container">
+  <div class="ons-grid">
+
+    <div class="ons-grid__col ons-col-12@m">
+      <section class="search__summary" role="contentinfo" aria-label="Search summary">
+        {{ template "partials/summary" . }}
+      </section>
+    </div>
+
+    <div class="ons-grid__col ons-col-4@m">
+      <section class="search__filter" role="contentinfo" aria-label="Search filtering">
+        <div class="search__filter__heading">
+          <h3 class="font-size--18">
+            {{ localise "FilterResults" $lang 4 }}
+          </h3>
+        </div>
+        <div class="search__filter__content">
+          {{ template "partials/filter" . }}
+        </div>
+      </section>
+    </div>
+
+    <div class="ons-grid__col ons-col-8@m">
+      <section role="contentinfo" aria-label="Search results">
+        <div class="search__sort">
+          {{ template "partials/sort" . }}
+        </div>
+        <div class="search__results">
+          {{ template "partials/department" . }}
+          {{ template "partials/results" . }}
+        </div>
+        <div class="search__pagination">
+          {{ template "partials/pagination" . }}
+        </div>
+      </section>
+    </div>
+
   </div>
 </div>
