added full-screen filter for mobile and tablet

--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -87,3 +87,8 @@
         <strong>Please note: </strong>all historical data is still on this website.
     </p>
 </div>
+<div class="search__filter__mobile-filter-toggle hide">
+    <button type="button" class="ons-btn" aria-controls="search-filter">
+        <span class="ons-btn__inner">Show results</span>
+    </button>
+</div>
