--- a/assets/templates/partials/sort.tmpl
+++ b/assets/templates/partials/sort.tmpl
@@ -7,19 +7,18 @@
     {{ range $theFilter := .Data.Filter }}
         <input type="hidden" name="filter" value="{{ $theFilter }}"/>
     {{end}}
-    <div class="ons-field--search-sort js-mobile-filters__sort">
-        <label for="sort" class="ons-label sort__label font-size--16">Sort by
-            <select class="ons-input ons-input--select ons-input--sort-select input select width-auto js-auto-submit__input font-size--16" id="sort" name="sort">
-                {{ $sortQuery := .Data.Sort.Query }}
-                {{ range $sort := .Data.Sort.Options }}
-                    <option class="sort__option"
-                            value={{ .Query}} 
-                            {{ if eq .Query $sortQuery }}selected{{end}}>
-                        {{ localise .LocaliseKeyName $lang 1 }}
-                    </option>
-                {{ end }}
-            </select>
-        </label>
+    <div class="ons-field--search-sort search__sort__select">
+        <label for="sort" class="ons-label sort__label font-size--16">Sort by</label>
+        <select class="ons-input ons-input--select ons-input--sort-select input select font-size--16" id="sort" name="sort">
+            {{ $sortQuery := .Data.Sort.Query }}
+            {{ range $sort := .Data.Sort.Options }}
+                <option class="sort__option"
+                        value={{ .Query}} 
+                        {{ if eq .Query $sortQuery }}selected{{end}}>
+                    {{ localise .LocaliseKeyName $lang 1 }}
+                </option>
+            {{ end }}
+        </select>
         <button type="submit" class="ons-btn btn btn--primary btn--thin btn--small js--hide font-size--16">Sort</button>
     </div>
 </form>
