--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -26,46 +26,50 @@
             <a href="/search{{ if .Data.Query }}?q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
             <p class="ons-checkboxes__label">Show only:</p>
             {{ range $index, $topFilter := $filters}}
-                <div class="ons-checkboxes__items">
-                    <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
-                        <span class="ons-checkbox ons-checkbox--no-border category-filter">
-                            <input type="checkbox" id="group-{{ $index }}"
-                                class="ons-checkbox__input ons-js-checkbox"
-                                value="{{ print $topFilter.FilterKey }}" categoryChildren="{{ print $topFilter.FilterKey }}" aria-controls="group-{{ $index }}-other-wrap"
-                                aria-haspopup="true"
-                                {{if $topFilter.IsChecked }}
-                                    checked
-                                {{end}}
-                            >
-                            <label class="ons-checkbox__label" for="group-{{ $index }}" id="group-{{ $index }}-label">
-                                {{ localise $topFilter.LocaliseKeyName $lang 4 }} ({{ $topFilter.NumberOfResults }})
-                            </label>
-                            <span class="ons-checkbox__other" id="group-{{ $index }}-other-wrap">
-                                <fieldset class="ons-fieldset ons-js-other-fieldset">
-                                    {{range $index, $childFilter := $topFilter.Types}}
-                                        {{$id := index $childFilter.FilterKey 0}}
-                                        <div class="ons-checkboxes__items">
-                                            <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
-                                                <span class="ons-checkbox ons-checkbox--no-border child-filter">
-                                                    <input id="{{ $id }}"
-                                                        class="ons-checkbox__input ons-js-checkbox"
-                                                        type="checkbox" name="filter"
-                                                        {{ if $childFilter.IsChecked }}checked{{end}}
-                                                        value="{{ $id }}"
-                                                    />
-                                                    <label class="ons-checkbox__label" for="{{ $id }}"
-                                                        id="{{ $id }}-label">
-                                                        {{ localise $childFilter.LocaliseKeyName $lang 4 }} ({{ $childFilter.NumberOfResults }})
-                                                    </label>
-                                                </span>
-                                            </span>
-                                        </div>
-                                    {{ end }}
-                                </fieldset>
+                {{if ne $topFilter.NumberOfResults 0}}
+                    <div class="ons-checkboxes__items">
+                        <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
+                            <span class="ons-checkbox ons-checkbox--no-border category-filter">
+                                <input type="checkbox" id="group-{{ $index }}"
+                                    class="ons-checkbox__input ons-js-checkbox"
+                                    value="{{ print $topFilter.FilterKey }}" categoryChildren="{{ print $topFilter.FilterKey }}" aria-controls="group-{{ $index }}-other-wrap"
+                                    aria-haspopup="true"
+                                    {{if $topFilter.IsChecked }}
+                                        checked
+                                    {{end}}
+                                >
+                                <label class="ons-checkbox__label" for="group-{{ $index }}" id="group-{{ $index }}-label">
+                                    {{ localise $topFilter.LocaliseKeyName $lang 4 }} ({{ $topFilter.NumberOfResults }})
+                                </label>
+                                <span class="ons-checkbox__other" id="group-{{ $index }}-other-wrap">
+                                    <fieldset class="ons-fieldset ons-js-other-fieldset">
+                                        {{range $index, $childFilter := $topFilter.Types}}
+                                            {{if ne $childFilter.NumberOfResults 0}}
+                                                {{$id := index $childFilter.FilterKey 0}}
+                                                <div class="ons-checkboxes__items">
+                                                    <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
+                                                        <span class="ons-checkbox ons-checkbox--no-border child-filter">
+                                                            <input id="{{ $id }}"
+                                                                class="ons-checkbox__input ons-js-checkbox"
+                                                                type="checkbox" name="filter"
+                                                                {{ if $childFilter.IsChecked }}checked{{end}}
+                                                                value="{{ $id }}"
+                                                            />
+                                                            <label class="ons-checkbox__label" for="{{ $id }}"
+                                                                id="{{ $id }}-label">
+                                                                {{ localise $childFilter.LocaliseKeyName $lang 4 }} ({{ $childFilter.NumberOfResults }})
+                                                            </label>
+                                                        </span>
+                                                    </span>
+                                                </div>
+                                            {{ end }}
+                                        {{ end }}
+                                    </fieldset>
+                                </span>
                             </span>
                         </span>
-                    </span>
-                </div>
+                    </div>
+                {{ end }}
             {{ end }}
         </div>
         </div>
