removed hacky way of making the ons-collapsable open by default, added an attribute that will do so when we are using the updated design-system in future

--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -7,8 +7,7 @@
     <input type="hidden" name="q" value="{{ $query }}"/>
     <input type="hidden" name="sort" value="{{$sort}}"/>
     <fieldset class="ons-fieldset">
-        <script>window.localStorage.collapsibleContentType = true</script>
-        <div id="collapsibleContentType" class="ons-collapsible ons-js-collapsible" data-btn-close="Hide this">
+        <div id="collapsibleContentType" class="ons-collapsible ons-js-collapsible" data-btn-close="Hide this" data-open="true">
         <div class="ons-collapsible__heading ons-js-collapsible-heading">
             <div class="ons-collapsible__controls">
             <h2 class="ons-collapsible__title">
