--- a/assets/templates/partials/results.tmpl
+++ b/assets/templates/partials/results.tmpl
@@ -8,7 +8,7 @@
         <ul class="flush--padding">
         {{ range $i, $item := .Data.Response.Items }}
             {{ $currentPosition := add $i 1 }}
-            <li class="search__results__item">
+            <li class="search__results__item{{if eq $item.Type.Type `product_page`}} search__results__item--product-page{{end}}">
                 <h3>
                     <a href="{{ .URI }}"
                         data-gtm-search-result-title="{{ .Description.Title }}"
@@ -22,14 +22,36 @@
                         {{ .Description.Edition | safeHTML }}
                     </a>
                 </h3>
-                <p class="search__results__meta font-size--16">
-                    <b>{{ localise "ReleasedOn" $lang 1 }}:</b> {{dateFormat .Description.ReleaseDate}}
-                    |
-                    <b>{{ localise .Type.LocaliseKeyName $lang 1 }}</b>
-                </p>
+                {{if eq $item.Type.Type `product_page`}}
+                    <p class="search__results__meta font-size--16">
+                        <b>Topic</b>
+                    </p>
+                {{else}}
+                    <p class="search__results__meta font-size--16">
+                        <b>{{ localise "ReleasedOn" $lang 1 }}:</b> {{dateFormat .Description.ReleaseDate}}
+                        |
+                        <b>{{ localise .Type.LocaliseKeyName $lang 1 }}</b>
+                    </p>
+                {{end}}
                 <p class="search__results__summary font-size--16">
                     {{ if .Description.Highlight.Summary }} {{ .Description.Highlight.Summary | safeHTML }} {{ else }} {{ .Description.Summary | safeHTML }} {{ end }}
                 </p>
+                {{if eq $item.Type.Type `product_page`}}
+                    <p class="search__results__summary--product-page font-size--16">
+                        View all <a href="{{ .URI }}#datasets">datasets</a> or <a href="{{ .URI }}#publications">publications</a> related to 
+                        <a href="{{ .URI }}"
+                            data-gtm-search-result-title="{{ .Description.Title }}"
+                            data-gtm-search-result-page="{{ $currentPage }}"
+                            data-gtm-search-result-position="{{ add $totalSearchPosition $currentPosition }}"
+                            data-gtm-search-result-url="{{ .URI }}"
+                            data-gtm-search-result-release-date="{{ dateFormatYYYYMMDDNoSlashes .Description.ReleaseDate }}"
+                        >
+                            {{ .Description.Title | safeHTML }}
+                            {{ if .Description.Edition }}:{{ end }}
+                            {{ .Description.Edition | safeHTML }}
+                        </a>
+                    </p>
+                {{end}}
                 {{ $keywords := .Description.Keywords }}
                 {{ if $keywords }}
                     {{ $numberOfKeywords := len $keywords }}
