--- a/assets/templates/partials/summary.tmpl
+++ b/assets/templates/partials/summary.tmpl
@@ -13,22 +13,22 @@
         for
     </span>
     <span class="search__summary__query">{{ .Data.Query}}</span>
-    <span class="search__summary__suggestion">
-        {{ if .Data.Response.Suggestions}}
+    {{ $len := len .Data.Response.AdditionalSuggestions}}
+    {{ if .Data.Response.Suggestions}}
+        <span class="search__summary__suggestion">
             Did you mean <a class="underline-link"
                             href="/search?q={{ index .Data.Response.Suggestions 0 }}">{{ index .Data.Response.Suggestions 0 }}</a>?
-        {{ else }}
-            {{ $len := len .Data.Response.AdditionalSuggestions}}
-            {{ if gt $len 0 }}
-                Try
-                {{ range $i, $suggestion := .Data.Response.AdditionalSuggestions}}
-                    <a class="underline-link" href="/search?q={{ $suggestion }}">{{ $suggestion }}</a>
-                    {{ if notLastItem $len $i }}
-                        or
-                    {{ end }}
+        </span>
+    {{ else if gt $len 0 }}
+        <span class="search__summary__suggestion">
+            Try
+            {{ range $i, $suggestion := .Data.Response.AdditionalSuggestions}}
+                <a class="underline-link" href="/search?q={{ $suggestion }}">{{ $suggestion }}</a>
+                {{ if notLastItem $len $i }}
+                    or
                 {{ end }}
             {{ end }}
-        {{ end }}
-    </span>
+        </span>
+    {{ end }}
 </div>
 
