changes as per PR comments

--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -2,7 +2,7 @@
 <div class="ons-container search__container">
   <div class="ons-grid">
 
-    {{if .Data.ValidationProblem}}
+    {{if .Data.ErrorMessage}}
 
       <div class="ons-grid__col ons-col-12@m">
         <section class="search__summary">
