--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -32,6 +32,7 @@
                                     class="ons-checkbox__input ons-js-checkbox"
                                     value="{{ print $topFilter.FilterKey }}" categoryChildren="{{ print $topFilter.FilterKey }}" aria-controls="group-{{ $index }}-other-wrap"
                                     aria-haspopup="true"
+                                    data-readable-name="{{ localise $topFilter.LocaliseKeyName $lang 4 }}"
                                     {{if $topFilter.IsChecked }}
                                         checked
                                     {{end}}
@@ -51,6 +52,7 @@
                                                                 class="ons-checkbox__input ons-js-checkbox"
                                                                 type="checkbox" name="filter"
                                                                 {{ if $childFilter.IsChecked }}checked{{end}}
+                                                                data-readable-name="{{ localise $childFilter.LocaliseKeyName $lang 4 }}"
                                                                 value="{{ $id }}"
                                                             />
                                                             <label class="ons-checkbox__label" for="{{ $id }}"
