--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -32,7 +32,7 @@
                                     class="ons-checkbox__input ons-js-checkbox"
                                     value="{{ print $topFilter.FilterKey }}" categoryChildren="{{ print $topFilter.FilterKey }}" aria-controls="group-{{ $index }}-other-wrap"
                                     aria-haspopup="true"
-                                    data-gtm-label="{{ localise $topFilter.LocaliseKeyName "en" 4 }}"
+                                    data-gtm-label="{{ $topFilter.LocaliseKeyName }}"
                                     {{if $topFilter.IsChecked }}
                                         checked
                                     {{end}}
@@ -52,7 +52,7 @@
                                                                 class="ons-checkbox__input ons-js-checkbox"
                                                                 type="checkbox" name="filter"
                                                                 {{ if $childFilter.IsChecked }}checked{{end}}
-                                                                data-gtm-label="{{ localise $childFilter.LocaliseKeyName "en" 4 }}"
+                                                                data-gtm-label="{{ $childFilter.LocaliseKeyName }}"
                                                                 value="{{ $id }}"
                                                             />
                                                             <label class="ons-checkbox__label" for="{{ $id }}"
