only show additional results when no results

--- a/assets/templates/partials/summary.tmpl
+++ b/assets/templates/partials/summary.tmpl
@@ -14,12 +14,13 @@
     </span>
     <span class="search__summary__query">{{ .Data.Query}}</span>
     {{ $len := len .Data.Response.AdditionalSuggestions}}
+    {{ $numberResults := len .Data.Response.Items}}
     {{ if .Data.Response.Suggestions}}
         <span class="search__summary__suggestion">
             Did you mean <a class="underline-link"
                             href="/search?q={{ index .Data.Response.Suggestions 0 }}">{{ index .Data.Response.Suggestions 0 }}</a>?
         </span>
-    {{ else if gt $len 0 }}
+    {{ else if (and (gt $len 0) (le $numberResults 0) ) }}
         <span class="search__summary__suggestion">
             Try
             {{ range $i, $suggestion := .Data.Response.AdditionalSuggestions}}
