add in new translations

--- a/assets/templates/partials/standalone-search.tmpl
+++ b/assets/templates/partials/standalone-search.tmpl
@@ -1,5 +1,5 @@
 <form class="search__form search__form--no-results" action="/search">
-    <label class="search__label--no-results" for="search-in-page">Search for data, analysis and other publications.</label>
+    <label class="search__label--no-results" for="search-in-page">{{ localise "SearchForData" .Language 1 }}</label>
     <input
         type="search"
         autocomplete="off"
