--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -6,7 +6,7 @@
 
       <div class="ons-grid__col ons-col-12@m">
         <section class="search__summary">
-          <span class="search__summary__generic">Enter a search term</span>
+          <span class="search__summary__generic">{{ localise "EnterSearchTerm" $lang 1 }}</span>
         </section>
         {{ template "partials/standalone-search" . }}
       </div>
