translation for the filter

--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -12,7 +12,7 @@
             <div class="ons-collapsible__controls">
             <h2 class="ons-collapsible__title">
                 <legend class="ons-fieldset__legend">
-                    Content type
+                    {{ localise "ContentType" $lang 1 }}
                 </legend>
             </h2>
             <span class="ons-collapsible__icon">
