--- a/assets/templates/partials/results.tmpl
+++ b/assets/templates/partials/results.tmpl
@@ -4,6 +4,14 @@
 {{ $totalSearchPosition := multiply (subtract $currentPage 1) $itemsPerPage }}
 {{ $response := .Data.Response }}
 <div id="results">
+    <div id="results-loading" class="ons-panel ons-panel--info ons-panel--no-title hide">
+        <span class="ons-u-vh">Important information: </span>
+        <div class="ons-panel__body">
+        <p data-error-message="The results failed to load, please refresh.">
+            Loading search results.
+        </p>
+        </div>
+    </div>
     <ul class="flush--padding">
     {{ range $i, $item := .Data.Response.Items }}
         {{ $currentPosition := add $i 1 }}
