add banner template with design system styling

--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -58,7 +58,7 @@
             {{ template "partials/results" . }}
           </div>
           <div class="search__pagination">
-            {{ template "partials/pagination" . }}
+            {{ template "partials/search-pagination" . }}
           </div>
         </section>
       </div>
