--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -15,7 +15,7 @@
                     <span class="ons-checkbox ons-checkbox--no-border category-filter">
                         <input type="checkbox" id="topic-group-{{ $index }}"
                             class="ons-checkbox__input ons-js-checkbox"
-                            value="{{ print $topFilter.FilterKey }}" categoryChildren="{{ print $topFilter.FilterKey }}" aria-controls="topic-group-{{ $index }}-other-wrap"
+                            value="{{ print $topFilter.Query }}"
                             aria-haspopup="true"
                             data-gtm-label="{{ $topFilter.LocaliseKeyName }}"
                             {{ if $topFilter.IsChecked }}
@@ -26,31 +26,6 @@
                         <label class="ons-checkbox__label" for="topic-group-{{ $index }}" id="topic-group-{{ $index }}-label">
                             {{ localise $topFilter.LocaliseKeyName $lang 4 }} ({{ $topFilter.NumberOfResults }})
                         </label>
-                        <span class="ons-checkbox__other" id="topic-group-{{ $index }}-other-wrap">
-                            <fieldset class="ons-fieldset ons-js-other-fieldset">
-                                {{ range $index, $childFilter := $topFilter.Types }}
-                                    {{ $id := index $childFilter.FilterKey 0 }}
-                                    <div class="ons-checkboxes__items">
-                                        <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
-                                            <span class="ons-checkbox ons-checkbox--no-border child-filter">
-                                                <input id="{{ $id }}"
-                                                    class="ons-checkbox__input ons-js-checkbox"
-                                                    type="checkbox" name="filter"
-                                                    {{ if $childFilter.IsChecked }}checked{{end}}
-                                                    data-gtm-label="{{ $childFilter.LocaliseKeyName }}"
-                                                    value="{{ $id }}"
-                                                    {{ if eq $childFilter.NumberOfResults 0 }} disabled aria-disabled="true" {{ end }}
-                                                />
-                                                <label class="ons-checkbox__label" for="{{ $id }}"
-                                                    id="{{ $id }}-label">
-                                                    {{ localise $childFilter.LocaliseKeyName $lang 4 }} ({{ $childFilter.NumberOfResults }})
-                                                </label>
-                                            </span>
-                                        </span>
-                                    </div>
-                                {{ end }}
-                            </fieldset>
-                        </span>
                     </span>
                 </span>
             </div>
