--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -1,8 +1,9 @@
 {{ $lang := .Language }}
+{{ $length := len .Data.Query }}
 <div class="ons-container search__container">
   <div class="ons-grid">
 
-    {{if .Data.ErrorMessage}}
+    {{if or (eq $length 0) (.Data.ErrorMessage)}}
 
       <div class="ons-grid__col ons-col-12@m">
         <section class="search__summary">
