--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -26,6 +26,31 @@
                         <label class="ons-checkbox__label" for="topic-group-{{ $index }}" id="topic-group-{{ $index }}-label">
                             {{ localise $topicFilter.LocaliseKeyName $lang 4 }} ({{ $topicFilter.NumberOfResults }})
                         </label>
+                        <span class="ons-checkbox__other" id="group-{{ $index }}-other-wrap">
+                            <fieldset class="ons-fieldset ons-js-other-fieldset">
+                                {{ range $index, $childFilter := $topicFilter.Types }}
+                                    {{ $id := index $childFilter.Query 0 }}
+                                    <div class="ons-checkboxes__items">
+                                        <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
+                                            <span class="ons-checkbox ons-checkbox--no-border child-filter">
+                                                <input id="{{ $id }}"
+                                                    class="ons-checkbox__input ons-js-checkbox"
+                                                    type="checkbox" name="filter"
+                                                    {{ if $childFilter.IsChecked }}checked{{ end }}
+                                                    data-gtm-label="{{ $childFilter.LocaliseKeyName }}"
+                                                    value="{{ $id }}"
+                                                    {{ if eq $childFilter.NumberOfResults 0 }} disabled aria-disabled="true" {{ end }}
+                                                />
+                                                <label class="ons-checkbox__label" for="{{ $id }}"
+                                                    id="{{ $id }}-label">
+                                                    {{ $childFilter.LocaliseKeyName }} ({{ $childFilter.NumberOfResults }})
+                                                </label>
+                                            </span>
+                                        </span>
+                                    </div>
+                                {{ end }}
+                            </fieldset>
+                        </span>
                     </span>
                 </span>
             </div>
